还是不会写tex

--- a/CRYPTO/rsa.tex
+++ b/CRYPTO/rsa.tex
@@ -4,13 +4,13 @@
 \usepackage{lipsum}
 \title{\heiti\zihao{2} RSA}
 \author{\songti Crazy\_13754}
-\date{2024.01.13}
+\date{\today}
 \begin{document}
     \maketitle
 % \begin{abstract}
 %     \lipsum[2]
 % \end{abstract}
-\tableofcontents
+%\tableofcontents
 \section{过程}
 加密解密的过程，写写。
 \section[awa]{证明}
