--- a/CRYPTO/rsa.tex
+++ b/CRYPTO/rsa.tex
@@ -4,7 +4,7 @@
 \usepackage{cite} % 引用
 \usepackage{graphicx} % 插入图片所需要的宏包
 \usepackage{lipsum} % 生成虚拟文本（Lorem Ipsum）的宏包，测试或者占位用。
-\usepackage[hidelinks]{hyperref} % 取消超链接颜色，并且目录有超链接
+\usepackage[colorlinks=true]{hyperref} % [hidelinks]取消超链接颜色，并且目录有超链接。为了避免宏包冲突，将这个包放在最后调用。
 \newcommand{\upcite}[1]{\textsuperscript{\textsuperscript{\cite{#1}}}} % 定义上标引用，套两层会让上标更“上”一点
 \title{\heiti\zihao{2} RSA}
 \author{\songti Crazy\_13754}
@@ -54,14 +54,14 @@
 	\begin{minipage}{0.49\linewidth}
 		\centering
 		\includegraphics[width=0.9\linewidth]{contents/rsa2.jpg}
-		\caption{tupian1}
-		\label{tupian1}%文中引用该图片代号
+		\caption{冬の花}
+		\label{jjy}%文中引用该图片代号
 	\end{minipage}
 	\begin{minipage}{0.49\linewidth}
 		\centering
 		\includegraphics[width=0.9\linewidth]{contents/rsa3.jpg}
-		\caption{tupian2}
-		\label{tupian2}%文中引用该图片代号
+		\caption{RickT}
+		\label{TR}%文中引用该图片代号
 	\end{minipage}
 	%\qquad
 	%让图片换行，
@@ -69,34 +69,48 @@
 	\begin{minipage}{0.49\linewidth}
 		\centering
 		\includegraphics[width=0.9\linewidth]{contents/rsa4.jpg}
-		\caption{tupian3}
-		\label{tupian3}%文中引用该图片代号
+		\caption{朗格拉日}
+		\label{Lagrange}%文中引用该图片代号
 	\end{minipage}
 	\begin{minipage}{0.49\linewidth}
 		\centering
 		\includegraphics[width=0.9\linewidth]{contents/rsa5.jpg}
-		\caption{tupian4}
-		\label{tupian4}%文中引用该图片代号
+		\caption{dx3906}
+		\label{dx906999}%文中引用该图片代号
 	\end{minipage}
 \end{figure}
 
 \clearpage
-这显然把事情弄得更糟。好吧，只是我在学\LaTeX，而你浪费了不少时间来看刚刚的内容。而且你接下来看到的东西也会几乎全是复制的。
+这显然把事情弄得更糟。好吧，只是我在学\LaTeX，而你---我的朋友---浪费了你生命中的重要时间来看刚刚的内容。而且你接下来看到的东西也都可以找到。不知道这篇文章所帮助你减少的在浏览器上搜索的时间能否弥补它所浪费的时间。
 
-公钥密码系统的观点是由Diffie和Hell man在1796年首次提出的,它是密码学发展史上具有里程碑意义的一件大事。与传统对称密码体制(即加、解密密钥相同)相比,
+公钥密码系统的观点是由Diffie和Hell man在1796年首次提出的,它是密码学发展史上具有里程碑意义的一件大事。与传统对称密码体制（即加、解密密钥相同）相比,
 公钥系统使用两个密钥：加密密钥可以公开,称为公钥；解密密钥保密,为私钥。产生公钥体制的内在动力有两个：
 
 (1) 传统对称体制下密钥的存储和分配问题；
 
 (2) 消息鉴别问题,就是指用来检验消息来自于声称的来源并且没有被修改。
 
-公钥体制的基础是陷门(单向函数),即某种实际处理过程的不可逆性。目前的公钥思想基于两种：一是依赖于大数的因数分解的困难性；二是依赖于求模p离散对数的困难性。RSA密码算法就是基于大数的因数分解的困难性。
+公钥体制的基础是陷门（单向函数）,即某种实际处理过程的不可逆性。目前的公钥思想基于两种：一是依赖于大数的因数分解的困难性；二是依赖于求模p离散对数的困难性。RSA密码算法就是基于大数的因数分解的困难性。
 
+RSA加密算法是一种非对称加密算法，在公开密钥加密和电子商业中被广泛使用。RSA是由罗纳德·李维斯特(Ron Rivest)、阿迪·萨莫尔(Adi Shamir)和伦纳德·阿德曼(Leonard Adleman)在1977年一起提出的。当时他们三人都在麻省理工学院工作。RSA 就是他们三人姓氏开头字母拼在一起组成的。1973年，在英国政府通讯总部工作的数学家克利福德·柯克斯(Clifford Cocks)在一个内部文件中提出了一个与之等效的算法，但该算法被列入机密，直到1997年才得到公开。
 
-\section{过程}
+\href{https://mathmu.github.io/MTCAS/doc/IntegerFactorization.html}{这篇文章}介绍了因子分解的相关算法。对于RSA的攻击来说，\href{https://zh.wikipedia.org/wiki/%E6%99%AE%E9%80%9A%E6%95%B0%E5%9F%9F%E7%AD%9B%E9%80%89%E6%B3%95}{普通数域筛法(GNFS)}应该是最优的。如果我能看懂这个算法的话，会加上对它的介绍的……%这个记得要写
 
-\section[awa]{证明}
-rsa的证明。
+\section[算法描述]{加密与解密过程}
+
+以下是算法描述：
+\begin{itemize}
+    \item 取两个非常大的素数$p$和$q$。
+    \item 令$N = p \cdot q$，$\varphi(N) = (p - 1) \cdot (q - 1)$。
+    \item 找到一个素数$e < \varphi(N)$，且要求$e$与$\varphi(N)$互素，即有$gcd(e, \varphi(N)) = 1$。 % 先找d会怎么样，e不是素数会怎么样
+    \item 计算$e$在模$\varphi(N)$上的逆元$d$，即满足$e \cdot d \bmod \varphi(N) = 1$。
+    \item $(N, e)$作为公钥(pk, Public key)发给对方，$(N, d)$作为私钥(pt, Private key)保存。
+    \item 对方接受公钥后，将原文(pt, Plaintext)通过预先设定好的方式转换成数字，记为$p$，则密文(ct, Ciphertext)满足$ct = p ^ e \bmod N$（也就是$ct \equiv p ^ e (\bmod N)$），对方将密文发回。
+    \item 接收密文，并使用私钥解密：$p = ct ^ d \bmod N$，也就是$p \equiv ct ^ d (\bmod N)$。
+\end{itemize}
+
+\section{算法理论基础}
+
 
 \bibliography{contents/rsaref} % 导入bib
 \bibliographystyle{plain} % 参考文献排版风格
