--- a/CRYPTO/contents/rsaref.bib
+++ b/CRYPTO/contents/rsaref.bib
@@ -7,3 +7,17 @@
   pages={13--14},
   year={2006}
 }
+
+@Misc{中国剩余定理(CRT),
+howpublished = {[EB/OL]},
+note = {\url{https://zhuanlan.zhihu.com/p/44591114} 发布于 2018-10-16 12:05},
+title = {中国剩余定理(CRT)},
+author = {Bat特白}
+}
+
+@Misc{逆元的求法总结（3种基本方法+4种实现）,
+howpublished = {[EB/OL]},
+note = {\url{https://blog.csdn.net/xiaoming_p/article/details/79644386} 于 2018-03-23 15:49:12 发布},
+title = {逆元的求法总结（3种基本方法+4种实现）},
+author = {星辰大少主}
+}
